updated readme file

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 My rpmbuild tree
+
+Refer to:
+http://wiki.centos.org/HowTos/RebuildSRPM
+
+$ rpm -i /tmp/mypackage-1.0.0-1.src.rpm
+<edit SPEC/[package].spec
+$ rpmbuild -ba
